test/data/codegen/valid/write_one_projection_entity/queries.cypher
// name: CreatePerson :one
CREATE (p:Person {id: $id, name: $name}) RETURN p
