test/data/codegen/invalid/exec_on_projection_write/queries.cypher
// name: ExecWriteProjection :exec
CREATE (p:Person {id: $id}) RETURN p
